fix: Use svh to ensure that app content is visible on mobile

--- a/framework/vars.scss
+++ b/framework/vars.scss
@@ -38,9 +38,10 @@ $off-black-color: #00040d;
 
   --layout-padding: min(40px, 5vw);
 
+  --body-height: 100svh;
   --header-height: 64px;
   --footer-height: 30px;
-  --main-height: calc(100vh - var(--header-height) - var(--footer-height));
+  --main-height: calc(var(--body-height) - var(--header-height) - var(--footer-height));
 
   --typography-font-family: "Inter Variable Cords", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif;
   --typography-base-font-size: 1rem;
